# core

./: LICENSE  README.md  mypy.ini  pyproject.toml
docs/concepts/: concepts.txt
docs/sample_formats/: requirements.yaml
sample_formats/: markup.swml  roadmap.yaml  softwarearchitecture.yaml  testspecs.yaml
scripts/: activate_venv  assure_quality  check_quality  setup_venv
swe_as_code/db/: layout.py  model.py  utils.py
swe_as_code/ui/: _args.py  _commands.py  cli.py
tests/: test_doit.py
