[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "swe_as_code"
version = "0.0.1"
dependencies = [
    "typed_argparse"
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]